# storyloop-test

./: .env  .gitignore  Dockerfile  Dockerfile.hunyuan  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  celery_app.py  cluster.py  config.py  extensions.py  forms.py  manage.py  models.py
app/routes/: auth.py  main.py  scene.py  story.py
app/tasks/: __init__.py  email.py  hunyuan.py  video.py
infra/: hunyuan_requirements.txt  serve.py
infra/cloudfunctions/: requirements.txt
infra/cloudfunctions/create_cluster/: main.py
infra/cloudfunctions/delete_cluster/: main.py
infra/helm/hunyuan/: Chart.yaml  values.yaml
infra/pubsub/: setup.sh
migrations/versions/: 3098fdaffe43_turn_participants.py
templates/: base.html
templates/auth/: login.html  login_old.html  register.html
templates/story/: create.html  dashboard.html  detail.html
